<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.example.fangyi.newsclient.view.NoScrollViewPager
        android:id="@+id/vp_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

    </com.example.fangyi.newsclient.view.NoScrollViewPager>

    <RadioGroup
        android:id="@+id/rg_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@mipmap/bottom_tab_bg"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_home"
            style="@style/BottonTabStyle"
            android:drawableTop="@drawable/btn_tab_home_selector"
            android:text="@string/BtnTagText1" />

        <RadioButton
            android:id="@+id/rb_news"
            style="@style/BottonTabStyle"
            android:drawableTop="@drawable/btn_tab_news_selector"
            android:text="@string/BtnTagText2" />

        <RadioButton
            android:id="@+id/rb_smart"
            style="@style/BottonTabStyle"
            android:drawableTop="@drawable/btn_tab_smart_selector"
            android:text="@string/BtnTagText3" />

        <RadioButton
            android:id="@+id/rb_gov"
            style="@style/BottonTabStyle"
            android:drawableTop="@drawable/btn_tab_gov_selector"
            android:text="@string/BtnTagText4" />

        <RadioButton
            android:id="@+id/rb_setting"
            style="@style/BottonTabStyle"
            android:drawableTop="@drawable/btn_tab_setting_selector"
            android:text="@string/BtnTagText5" />

    </RadioGroup>

</LinearLayout>